tests/success/sub.avm
; test sub
push int8(0)
push float(42.42)
hdump
sub
hdump
assert float(-42.42)
push int8(-1)
hdump
sub
assert float(-41.42)
pop
exit
