tests/fail/comment_cut_command.avm
; mul
m;ul
m ;ul
mu;l
push ; int8(0)
assert int8;(0)
assert int8(;0)
assert int8(0;)
assert float(42;.42)
assert float(42.;42)
assert float(42.42;)
